# IBKR-Adapter

./: CMakeLists.txt  README.md
inc/: IBKRAdapter.h  IGenericConnectionAdapter.h
src/: IBKR-Adapter.cpp  IBKR-Adapter.h  IBKRClient.cpp  IBKRClient.h  main.cpp
src/ib_api_v9.76/: CommonDefs.h  Contract.h  ContractCondition.cpp  ContractCondition.h  EClient.cpp  EClient.h  EClientSocket.cpp  EDecoder.cpp  EOrderDecoder.cpp  EReader.cpp  ESocket.cpp  EWrapper.h  Execution.h  MarginCondition.h  OperatorCondition.h  Order.h  OrderCondition.cpp  OrderCondition.h  PriceCondition.h  VolumeCondition.h  bar.h
